Fix for module list view grid alignment

--- a/ui/less/styles.less
+++ b/ui/less/styles.less
@@ -191,7 +191,7 @@ header.site-header {
 // Module: Modules list view (gallery view)
 // body.modules-list-view
 body.modules-list-view {
-    #modules-gallery{
+    #modules-gallery {
         padding-top: 10px;
         header ul {
             padding-top: 6px;
@@ -208,17 +208,23 @@ body.modules-list-view {
                 color: black;
             }
         }
+        #filter-passion {
+            position: relative;
+            left: 4px;
+        }
+    }
+    .module-list-item {
+        border-right: 2px solid white;
+        border-bottom: 2px solid white;
+        width: 33.3%;
     }
     .module-list-item.size-1 {
-        width: 33%;
         height: 250px;
     }
     .module-list-item.size-2 {
-        width: 33%;
         height: 300px;
     }
     .module-list-item.size-3 {
-        width: 33%;
         height: 400px;
     }
     .caption {
